# ADBRServer

./: Cargo.toml  README.md  build_deb.sh
releases/: adbr-server_1.0.0-1.deb
src/: constants.rs  logging.rs  main.rs
src/adb/: mod.rs
src/adb/connections/: adb_connection.rs  adb_device_connection.rs  mod.rs
src/adb/connections/auth/: authenticator.rs
src/adb/connections/handlers/: mod.rs  port_forward_handler.rs  port_reverse_handler.rs  scripting_handler.rs  security_handler.rs  shell_handler.rs
src/adb/connections/protocol/: message_stream.rs  mod.rs  protocol.rs
src/adb/enums/: adb_device_status.rs  adb_device_transport.rs  adb_device_type.rs  adb_forward_type.rs  adb_listener.rs  adb_sync_command.rs  mod.rs
src/adb/errors/: adb_connection_error.rs  adb_io_error.rs  adb_server_error.rs  mod.rs
src/adb/io/: daemon.rs  mod.rs  socket.rs
src/adb/models/: adb_device.rs  adb_message.rs  adb_port_forward.rs  adb_port_forward_info.rs  adb_port_reverse.rs  adb_port_reverse_info.rs  adb_task.rs  adb_transaction_info.rs  mod.rs
src/adb/packet_store/: adb_packet_store.rs  mod.rs
src/adb/server/: devices.rs  mod.rs  port_forward.rs  port_reverse.rs  scripting.rs  security.rs  server.rs  shell.rs  sync.rs  transport.rs
src/scanners/: devices_scanner.rs  devices_scanner_impl.rs  devices_scanner_trait.rs  mod.rs  tcp_devices_scanner.rs  usb_devices_scanner.rs
src/transport/: mod.rs  transport.rs  usb_transport.rs
src/transport/enums/: interface_type.rs  mod.rs
src/transport/errors/: mod.rs  transport_error.rs
src/utils/: utils.rs
(+8 files in other folders)
