[package]
name = "adbr-server"
version = "1.0.0"
edition = "2021"


[[bin]]
name = "adbr-server"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
rusb = "0.9.3"
byteorder = "1.5.0"
hostname = { version = "0.4.0", features = [] }
dirs = "5.0.1"
rsa = "0.6"
lazy_static = { version = "1.4.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
dashmap = "6.1.0"
async-trait = "0.1.80"
futures = "0.3.30"
time = "0.3.36"
tokio-stream = "0.1"
log = "0.4.22"
once_cell = "1.19.0"
tempfile = "3.14.0"
tracing-appender = "0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"